converted models, but they dont work!

--- a/notebooks/int8_tutorial.ipynb
+++ b/notebooks/int8_tutorial.ipynb
@@ -308,7 +308,8 @@
     "model = model.cpu()\n",
     "int8_linear_layer = bnb.nn.triton_based_modules.SwitchBackLinear\n",
     "# replace linear layers, for now just replace FFN - more coming in later PR\n",
-    "int8_model = open_clip.utils.replace_linear(model, int8_linear_layer, include_modules=['c_fc', 'c_proj']).cuda()\n"
+    "int8_model = open_clip.utils.replace_linear(model, int8_linear_layer, include_modules=['c_fc', 'c_proj']).cuda()\n",
+    "open_clip.utils.freeze_batch_norm_2d(int8_model, )\n"
    ]
   },
   {
@@ -528,6 +529,17 @@
    "metadata": {},
    "source": [
     "# TODO export `int8_model` here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int8_model.set_grad_checkpointing(enable=False)\n",
+    "module = torch.jit.trace_module(int8_model, {'encode_image': img_preprocessed})\n",
+    "module.save('int8_module.pt')"
    ]
   },
   {
